Update and rename github-actions-example.yaml to github-actions-demo.yml

--- a/github-actions-demo.yml
+++ b/github-actions-demo.yml
@@ -1,5 +1,5 @@
 # ワークフロー名の設定
-name: github-actions-example
+name: github-actions-demo.yml
 
 # トリガーの設定
 # この場合は backend ディレクトリ配下に変更が加えたコミットが main ブランチにプッシュされた場合にワークフローを実行する。
