--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,11 +15,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Go ${{ matrix.go-version }}
+      - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
-          cache-dependency-path: subdir/go.sum
-      # You can test your matrix by printing the current Go version
-      - name: Display Go version
-        run: go version
+          go-version: '1.21.x'
+      - name: Install dependencies
+        run: go get .
+      - name: Build
+        run: go build -v ./...
+      - name: Test with the Go CLI
+        run: go test
