--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,3 +19,10 @@ jobs:
       # You can test your matrix by printing the current Go version
       - name: Display Go version
         run: go version
+
+      - name: Setup Go 1.21.x
+        uses: actions/setup-go@v5
+        with:
+          # Semantic version range syntax or exact version of Go
+          go-version: '1.21.x'
+
